# snake-game-rust

./: .gitignore  Cargo.toml  Makefile
src/: lib.rs
www/: index.html  index.ts  package-lock.json  package.json  tsconfig.json  webpack.config.js
www/utils/: rnd.js
