[package]
name = "snake_game"
version = "0.1.0"
edition = "2021"
description = "amazing"
license = "MIT"
repository = ""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2"
wee_alloc = "0.4"

[lib]
crate-type = ["cdylib"]
